--- a/install
+++ b/install
@@ -1,17 +1,23 @@
 #!/bin/bash
 set -eu
 
+if type -p zsh; then
+	sudo chsh -s "`type -p zsh`"
+	sh -c "$(curl -fsSL https://raw.githubusercontent.com/robbyrussell/oh-my-zsh/master/tools/install.sh)"
+	sed --in-place='' -e '/^ZSH_THEME="roubyrussell"$/cZSH_THEME="clean"' -e '/^plugins=/cplugins=(git z)' ~/.zshrc
+fi
+
 cd "`dirname "${BASH_SOURCE[0]}"`"
 
 for e in gitconfig vimrc screenrc tmux.conf; do
-  src="$PWD"/$e
-  dest=~/.$e
-  test ! -f "$src" || test -e "$dest" || ln -s -f "$src" "$dest"
+	src="$PWD"/$e
+	dest=~/.$e
+	test ! -f "$src" || test -e "$dest" || ln -s -f "$src" "$dest"
 done
 
 if vim --version | grep '^VIM - Vi IMproved 7\.[3-9] '
 then
-  mkdir -p ~/.vim/bundle
-  test -e "$_"/Vundle.vim/.git || git clone --single-branch --depth=1 https://github.com/VundleVim/Vundle.vim.git ~/.vim/bundle/Vundle.vim
-  vim +PluginInstall +qa
+	mkdir -p ~/.vim/bundle
+	test -e "$_"/Vundle.vim/.git || git clone --single-branch --depth=1 https://github.com/VundleVim/Vundle.vim.git ~/.vim/bundle/Vundle.vim
+	vim +PluginInstall +qa
 fi
